--- a/assets/css/nav-footer.css
+++ b/assets/css/nav-footer.css
@@ -29,7 +29,7 @@ body {
 }
 
 header {
-    z-index: 12;
+    z-index: 99;
     position: absolute;
     top: 0;
     left: 0;
